--- a/checkup/style.css
+++ b/checkup/style.css
@@ -13,11 +13,18 @@ header{
     /* box-shadow: 0px 2px 4px -2px rgba(132,121,121,1); */
     position: fixed;
 }
+@media (max-width: 970px) {
+    header {
+      height: 100px;
+    }
+  }
 .container{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: stretch;
+    flex-wrap: wrap;
+    overflow:visible ;
 }
 
 
@@ -47,15 +54,32 @@ a:visited{
 }
 .home{
     padding-top: 6px;
+    order: 0;
 }
 .rubriker{
+    order: 1;
     display: flex;
     flex-direction: row;
     padding-top: 14px;
 }
+@media (max-width: 970px) {
+    .rubriker {
+      order:3;
+    }
+}
+@media (max-width: 970px){
+    .medlemskap{
+        order:2;
+    }
+}
+@media (max-width: 970px){
+    .inp{
+        order: 1;
+    }
+  }
+
 .rubrik{
     padding-right: 15px;
-
     text-align: center;
 }
 .rubrik:hover{
@@ -65,6 +89,7 @@ a:visited{
 }
 
 .inp{
+    order: 2;
     padding-top: 10px;
     
 }
@@ -92,6 +117,7 @@ button{
     border-radius: 15px;
 }
 .medlemskap{
+    order: 3;
     padding-top: 10px;
 }
     .medlem{
